packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_transform_qrls_in_ternary_expression.snap
---
source: packages/rust-optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
	const enabled = useSignal(false);
	const input = useSignal("");

  return (
     <input
		id="input"
		onInput$={
		enabled.value
			? $((ev, el) => {
				input.value = el.value;
			})
			: undefined
		}
		onFocus$={() => {
			enabled.value = true;
		}}
	/>
  );
});

============================= test.tsx_FieldInput_component_input_q_e_focus_Sgf3MDWzexI.js (ENTRY POINT)==

export const FieldInput_component_input_q_e_focus_Sgf3MDWzexI = (_, _1, enabled)=>{
    enabled.value = true;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gEAiBY;IACT,QAAQ,KAAK,GAAG;AACjB\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_focus_Sgf3MDWzexI",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_focus",
  "hash": "Sgf3MDWzexI",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_focus_Sgf3MDWzexI",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "eventHandler",
  "ctxName": "onFocus$",
  "captures": false,
  "loc": [
    324,
    360
  ],
  "paramNames": [
    "_",
    "_1",
    "enabled"
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_FieldInput_component_V4XAtJSTRKg = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg"), "FieldInput_component_V4XAtJSTRKg");
//
export const FieldInput = /*#__PURE__*/ componentQrl(q_FieldInput_component_V4XAtJSTRKg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,2BAAa,iDAmBvB\"}")
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_FieldInput_component_input_q_e_focus_Sgf3MDWzexI = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_input_q_e_focus_Sgf3MDWzexI"), "FieldInput_component_input_q_e_focus_Sgf3MDWzexI").m();
const q_FieldInput_component_input_q_e_input_wqR1xEjZjf4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4"), "FieldInput_component_input_q_e_input_wqR1xEjZjf4");
//
export const FieldInput_component_V4XAtJSTRKg = ()=>{
    const enabled = useSignal(false);
    const input = useSignal("");
    return /*#__PURE__*/ _jsxSorted("input", {
        "q-e:input": enabled.value ? q_FieldInput_component_input_q_e_input_wqR1xEjZjf4.w([
            input
        ]) : undefined,
        "q:p": enabled
    }, {
        id: "input",
        "q-e:focus": q_FieldInput_component_input_q_e_focus_Sgf3MDWzexI
    }, null, 6, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;gDAGqC;IACpC,MAAM,UAAU,UAAU;IAC1B,MAAM,QAAQ,UAAU;IAEvB,qBACG,WAAC;qBAGJ,QAAQ,KAAK;;aAIV;;;QANH,IAAG;QAQH,WAAQ;;AAKV\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    99,
    372
  ]
}
*/
============================= test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const FieldInput_component_input_q_e_input_wqR1xEjZjf4 = (ev, el)=>{
    const input = _captures[0];
    input.value = el.value;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;gEAYO,CAAC,IAAI;;IACR,MAAM,KAAK,GAAG,GAAG,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_input_wqR1xEjZjf4",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_input",
  "hash": "wqR1xEjZjf4",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    245,
    291
  ],
  "paramNames": [
    "ev",
    "el"
  ],
  "captureNames": [
    "input"
  ]
}
*/
== DIAGNOSTICS ==

[]
