packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_transform_two_handlers_capturing_different_block_scope_in_loop.snap
---
source: packages/rust-optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const arr = useSignal(['a', 'b'])
  return (
    <div>
      {arr.value.map((val, i) => {
        const index = i + 1;
        const label = val.toUpperCase();
        return (
          <div>
            <button onClick$={() => console.log(index)}>{val}</button>
            <span onKeyDown$={() => console.log(label)}>{label}</span>
          </div>
        )
      })}
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,2CAgBZ\"}")
============================= test.tsx_test_component_div_div_button_q_e_click_hCFE1Zqizzw.js (ENTRY POINT)==

export const test_component_div_div_button_q_e_click_hCFE1Zqizzw = (_, _1, index)=>console.log(index);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEAY8B,QAJhB,QAIsB,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_button_q_e_click_hCFE1Zqizzw",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_button_q_e_click",
  "hash": "hCFE1Zqizzw",
  "canonicalFilename": "test.tsx_test_component_div_div_button_q_e_click_hCFE1Zqizzw",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    318,
    342
  ],
  "paramNames": [
    "_",
    "_1",
    "index"
  ]
}
*/
============================= test.tsx_test_component_div_div_span_q_e_keydown_JMCQrlWndWA.js (ENTRY POINT)==

export const test_component_div_div_span_q_e_keydown_JMCQrlWndWA = (_, _1, label)=>console.log(label);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEAa8B,QAJhB,QAIsB,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_span_q_e_keydown_JMCQrlWndWA",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_span_q_e_keydown",
  "hash": "JMCQrlWndWA",
  "canonicalFilename": "test.tsx_test_component_div_div_span_q_e_keydown_JMCQrlWndWA",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onKeyDown$",
  "captures": false,
  "loc": [
    389,
    413
  ],
  "paramNames": [
    "_",
    "_1",
    "label"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_test_component_div_div_button_q_e_click_hCFE1Zqizzw = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_button_q_e_click_hCFE1Zqizzw"), "test_component_div_div_button_q_e_click_hCFE1Zqizzw").m();
const q_test_component_div_div_span_q_e_keydown_JMCQrlWndWA = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_span_q_e_keydown_JMCQrlWndWA"), "test_component_div_div_span_q_e_keydown_JMCQrlWndWA").m();
//
export const test_component_LUXeXe0DQrg = ()=>{
    const arr = useSignal([
        'a',
        'b'
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, arr.value.map((val, i)=>{
        const index = i + 1;
        const label = val.toUpperCase();
        return /*#__PURE__*/ _jsxSorted("div", null, null, [
            /*#__PURE__*/ _jsxSorted("button", {
                "q-e:click": q_test_component_div_div_button_q_e_click_hCFE1Zqizzw,
                "q:p": index
            }, null, val, 4, null),
            /*#__PURE__*/ _jsxSorted("span", {
                "q-e:keydown": q_test_component_div_div_span_q_e_keydown_JMCQrlWndWA,
                "q:p": label
            }, null, label, 4, null)
        ], 1, "u6_0");
    }), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAG0B;IACxB,MAAM,MAAM,UAAU;QAAC;QAAK;KAAI;IAChC,qBACE,WAAC,mBACE,IAAI,KAAK,CAAC,GAAG,CAAC,CAAC,KAAK;QACnB,MAAM,QAAQ,IAAI;QAClB,MAAM,QAAQ,IAAI,WAAW;QAC7B,qBACE,WAAC;0BACC,WAAC;gBAAO,WAAQ;uBAJd;qBAI2C;0BAC7C,WAAC;gBAAK,aAAU;uBAJd;qBAI2C;;IAGnD;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    484
  ]
}
*/
== DIAGNOSTICS ==

[]
