packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_wrap_inner_inline_component_prop.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 4087
expression: output
---
==INPUT==


import { $, component$, useStore, useSignal } from '@qwik.dev/core';
export default component$((props: { id: number }) => {
      const renders = useStore(
        {
          count: 0,
        },
        { reactive: false }
      );
      renders.count++;
      const rerenders = renders.count + 0;
      const Id = (props: any) => <div>Id: {props.id}</div>;
      return (
        <>
          <Id id={props.id} />
          {rerenders}
        </>
      );
    });

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEA,6BAAe,2CAgBR\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
export const test_component_LUXeXe0DQrg = (props)=>{
    const renders = useStore({
        count: 0
    }, {
        reactive: false
    });
    renders.count++;
    const rerenders = renders.count + 0;
    const Id = (props)=>/*#__PURE__*/ _jsxSorted("div", null, null, [
            "Id: ",
            _wrapProp(props, "id")
        ], 1, "u6_0");
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted(Id, null, {
            id: _wrapProp(props, "id")
        }, null, 3, "u6_1"),
        rerenders
    ], 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;0CAE0B,CAAC;IACrB,MAAM,UAAU,SACd;QACE,OAAO;IACT,GACA;QAAE,UAAU;IAAM;IAEpB,QAAQ,KAAK;IACb,MAAM,YAAY,QAAQ,KAAK,GAAG;IAClC,MAAM,KAAK,CAAC,sBAAe,WAAC;YAAI;sBAAK;;IACrC,qBACE;sBACE,WAAC;YAAG,EAAE,YAAE;;QACP;;AAGP\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    467
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
